# Dfe.Academies.Api.Infrastructure/Repositories/EstablishmentRepository.cs
@@ -75,6 +75,35 @@ namespace Dfe.Academies.Infrastructure.Repositories
             return queryResult.Select(ToEstablishment).ToList();
         }
 
+        public async Task<List<Establishment>> SearchByName(string name, bool? excludeClosed, bool? matchAny, CancellationToken cancellationToken)
+        {
+            if (string.IsNullOrEmpty(name))
+            {
+                return new List<Establishment>();
+            }
+
+            IQueryable<EstablishmentQueryResult> query = BaseQuery();
+
+            // If matchAny is true treat as a contains search, otherwise search for names that start with the provided value
+            if (matchAny == true)
+            {
+                query = query.Where(r => r.Establishment.EstablishmentName != null && r.Establishment.EstablishmentName.Contains(name));
+            }
+            else
+            {
+                query = query.Where(r => r.Establishment.EstablishmentName != null && r.Establishment.EstablishmentName.StartsWith(name));
+            }
+
+            if (excludeClosed == true)
+            {
+                query = query.Where(r => !r.Establishment.CloseDate.HasValue);
+            }
+
+            var queryResult = await query.Take(100).ToListAsync(cancellationToken);
+
+            return queryResult.Select(ToEstablishment).ToList();
+        }
+
         public async Task<IEnumerable<int>> GetURNsByRegion(string[] regions, CancellationToken cancellationToken)
         {
             return await context.Establishments
