# TramsDataApi/Controllers/V4/EstablishmentsController.cs
@@ -116,6 +116,31 @@ namespace TramsDataApi.Controllers.V4
 
             return Ok(response);
         }
+        
+        
+        [HttpGet]
+        [Route("establishments/search/by-name")]
+        [SwaggerOperation(Summary = "Search Establishments by Name", Description = "Returns a list of Establishments based on name search criteria.")]
+        [SwaggerResponse(200, "Successfully executed the search and returned Establishments.", typeof(List<EstablishmentDto>))]
+        public async Task<ActionResult<List<EstablishmentDto>>> SearchEstablishmentsByName(string name, bool? excludeClosed, bool? matchAny, CancellationToken cancellationToken)
+        {
+            _logger.LogInformation(
+                "Searching for establishments by name \"{name}\"",
+                name);
+
+            var (establishments, recordCount) = await _establishmentQueries
+                .SearchByName(name,excludeClosed,matchAny, cancellationToken).ConfigureAwait(false);
+
+            _logger.LogInformation(
+                "Found {count} establishments for name \"{name}\"",
+                recordCount, name);
+
+            _logger.LogDebug(JsonSerializer.Serialize(establishments));
+
+            var response = new List<EstablishmentDto>(establishments);
+
+            return Ok(response);
+        }
 
         /// <summary>
         /// Retrieves a list of establishment Unique Reference Numbers (URNs) by region.
